appId: org.wikimedia.wikipedia
---
- launchApp
- assertVisible: "The Free.*"
- assertVisible: "Skip"
- tapOn: "Skip"
- assertVisible: "Search Wikipedia"
- tapOn: "Search Wikipedia"
- inputText: "Bristol"
- waitForAnimationToEnd
- tapOn: "City and county in England"
- waitForAnimationToEnd
- tapOn:
    text: "Got it"
    optional: true
- tapOn:
    text: "Got it"
    optional: true
- tapOn:
    text: "Got it"
    optional: true
- tapOn:
    text: "Got it"
    optional: true
- assertVisible: ".*Avon.*"
